[package]
name = "reuse_bounds"
version = "0.1.0"
authors = ["Peter Kehl <peter.kehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
clearer-errors = []

[dependencies]
generics = "0.2.6"
syn = "1.0"
quote = "1.0"
reuse_bounds_macros = {path="reuse_bounds_macros/"}