[package]
name = "reuse_bounds_macros"
version = "0.1.0"
authors = ["Peter Kehl <peter.kehl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

keywords = []
# \--> serde? See if rug has serde.
categories = []
exclude = [".gitignore"]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.41", features = ["diff"] }

[dependencies]
syn = { version = "1.0.68", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = {version = "1.0.26" }